--- a/public/Odonto-Supreme.html
+++ b/public/Odonto-Supreme.html
@@ -132,16 +132,18 @@
 
   <div class="container">
     <div class="card">
-      <h2>ODONTO SUPREME</h2>
-      <form action="submit-cliente.php" method="POST">
-        <label for="nome">Produto:</label>
-        <input type="text" id="produto" name="produto" required>
+      <ul id="lista-produtos"></ul>
 
-        <label for="preco">Preço:</label>
-        <input type="text" id="preco" name="preco" required>
+<form id="form-odonto-supreme">
+  <label for="produto">Produto:</label>
+  <input type="text" id="produto" name="produto" required>
 
-        <button type="submit">Salvar</button>
-      </form>
+  <label for="preco">Preço:</label>
+  <input type="text" id="preco" name="preco" required>
+
+  <button type="submit">Salvar</button>
+</form>
+
     </div>
   </div>
   
@@ -150,6 +152,58 @@
   <footer>
     <p>&copy; 2025 Jose Luciano Odontologia. Todos os direitos reservados.</p>
   </footer>
+<script>
+  const fornecedor = 'ODONTO SUPREME';
+
+  document.getElementById('form-odonto-supreme').addEventListener('submit', async function(e) {
+    e.preventDefault();
+    const produto = document.getElementById('produto').value;
+    const preco = document.getElementById('preco').value;
+    const token = localStorage.getItem('token');
+
+    try {
+      const response = await fetch('http://localhost:4040/fornecedores', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+          'Authorization': 'Bearer ' + token
+        },
+        body: JSON.stringify({ nome: fornecedor, produtos: produto, precos: preco })
+      });
+
+      const data = await response.json();
+      if (response.ok) {
+        alert('Produto salvo com sucesso!');
+        document.getElementById('produto').value = '';
+        document.getElementById('preco').value = '';
+        carregarProdutos();
+      } else {
+        alert(data.erro || 'Erro ao salvar produto');
+      }
+    } catch (err) {
+      console.error(err);
+      alert('Erro ao conectar com o servidor');
+    }
+  });
+
+  async function carregarProdutos() {
+    try {
+      const res = await fetch(`http://localhost:4040/fornecedores/${encodeURIComponent(fornecedor)}`);
+      const dados = await res.json();
+      const lista = document.getElementById('lista-produtos');
+      lista.innerHTML = '';
+      dados.forEach(item => {
+        const li = document.createElement('li');
+        li.textContent = `${item.produtos}: R$ ${parseFloat(item.precos).toFixed(2)}`;
+        lista.appendChild(li);
+      });
+    } catch (error) {
+      console.error('Erro ao carregar produtos:', error);
+    }
+  }
+
+  carregarProdutos();
+</script>
 
 </body>
 </html>
