--- a/public/carcaca.html
+++ b/public/carcaca.html
@@ -733,12 +733,12 @@
       </div>
       <div class="cards-container">
         <div class="card">
-          <h3>Card 1</h3>
-          <p>Informações sobre o card 1.</p>
+          <h3>O QUE SOMOS ?</h3>
+          <p>O site José Luciano Odontologia foi desenvolvido com o objetivo de modernizar e facilitar o acompanhamento dos atendimentos odontológicos, otimizando a rotina clínica e proporcionando uma experiência mais organizada tanto para os profissionais, quanto para os pacientes.</p>
         </div>
         <div class="card">
-          <h3>Card 2</h3>
-          <p>Informações sobre o card 2.</p>
+          <h3>FUNCIONALIDADES</h3>
+          <p>A interface do site oferece uma navegação simples e funcional, focada em dois pilares essenciais da gestão odontológica: monitoramento de pacientes e controles sobre serviços, fornecedores e informações. Cada uma dessas áreas é representada por um card interativo na página inicial, premitindo acesso rápido e direto às funcionalidades principais do sistema.</p>
         </div>
       </div>
     </div>
