--- a/public/carcaca.html
+++ b/public/carcaca.html
@@ -209,12 +209,14 @@
       transform: translateY(-10px);
       filter: grayscale(30%) contrast(115%) brightness(90%) saturate(140%);
     }
-    .card h3 {
-      font-size: 24px;
+
+        .card h3 {
+      font-size: 27px;
       margin-bottom: 15px;
     }
     .card p {
-      font-size: 16px;
+      font-size: 21px;
+      padding: 10px;
     }
 
     /* divisoria1 */
