--- a/public/carcaca.html
+++ b/public/carcaca.html
@@ -356,6 +356,7 @@
   padding: 20px;
   width: 2000px;
   height: 500px;
+text-decoration:inerith
   border-radius: 12px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
   transition: transform 0.2s;
