--- a/public/carcaca.html
+++ b/public/carcaca.html
@@ -793,18 +793,18 @@ text-decoration:inerith;
      <div class="coluna-esquerda">
   <div class="cards-fornecedores">
 
- <a href="dental-prime.html" class="card-fornecedor">
+ <a href="dental-prime.html" class="card-fornecedor style="color: #000;">
   <h3>DENTAL PRIME</h3>
   <ul id="lista-dental-prime"></ul>
 </a>
 
 
-    <a href="Odonto-Supreme.html" class="card-fornecedor">
+    <a href="Odonto-Supreme.html" class="card-fornecedor style="color: #000;">
       <h3>ODONTO SUPREME</h3>
       <ul id="lista-odonto-supreme"></ul>
     </a>
 
-    <a href="Sorriso-Total.html" class="card-fornecedor">
+    <a href="Sorriso-Total.html" class="card-fornecedor style="color: #000;">
       <h3>SORRISO TOTAL</h3>
       <ul id="lista-sorriso-total"></ul>
     </a>
